--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
 @import "components.css";
 @import "light_mode_fixes.css";
 @import "pagy.css";
+@import "event_components.css";
+@import "event_show.css";
 
 /* Global styles */
 :root {
