--- a/app/views/event_favorites/index.html.erb
+++ b/app/views/event_favorites/index.html.erb
@@ -1,31 +1,35 @@
-<% content_for :title, "Event favorites" %>
+<%# app/views/event_favorites/index.html.erb %>
+<% content_for :title, "My Favorite Events" %>
 
-<div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
-  <% end %>
-
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Event favorites</h1>
-    <%= link_to "New event favorite", new_event_favorite_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+  <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-8">
+    <div>
+      <h1 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">My Favorites</h1>
+      <p class="mt-1 text-sm text-gray-500 dark:text-gray-400">Events you've saved for later</p>
+    </div>
   </div>
 
-  <div id="event_favorites" class="min-w-full divide-y divide-gray-200 space-y-5">
+  <div id="favorites" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     <% if @event_favorites.any? %>
-      <% @event_favorites.each do |event_favorite| %>
-        <div class="flex flex-col sm:flex-row justify-between items-center pb-5 sm:pb-0">
-          <%= render event_favorite %>
-          <div class="w-full sm:w-auto flex flex-col sm:flex-row space-x-2 space-y-2">
-            <%= link_to "Show", event_favorite, class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-            <%= link_to "Edit", edit_event_favorite_path(event_favorite), class: "w-full sm:w-auto text-center rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-            <div class="sm:inline-block">
-              <%= button_to "Destroy", event_favorite, method: :delete, class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 text-white bg-red-600 hover:bg-red-500 font-medium cursor-pointer", data: { turbo_confirm: "Are you sure?" } %>
-            </div>
-          </div>
-        </div>
+      <% @event_favorites.each do |favorite| %>
+        <%= render partial: 'events/event_card', locals: { event: favorite.event } %>
       <% end %>
     <% else %>
-      <p class="text-center my-10">No event favorites found.</p>
+      <div class="col-span-3 bg-white dark:bg-gray-800 rounded-xl p-8 text-center shadow-md border dark:border-gray-700">
+        <div class="flex flex-col items-center justify-center">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mb-4 text-gray-300 dark:text-gray-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+          </svg>
+          <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">No favorite events yet</h3>
+          <p class="text-gray-500 dark:text-gray-400 mb-6">Explore events and click the heart icon to add them to your favorites</p>
+          <%= link_to events_path, class: "btn btn-primary" do %>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+            Browse Events
+          <% end %>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
