--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,10 +1,55 @@
-<% content_for :title, "Editing event" %>
+<% content_for :title, "Edit Event - #{@event.title}" %>
 
-<div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing event</h1>
+<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
+  <% if notice.present? %>
+    <div class="mb-6">
+      <%= render 'shared/flash_message', message: notice, type: 'success' %>
+    </div>
+  <% end %>
+
+  <!-- Breadcrumbs -->
+  <nav class="mb-6">
+    <ol class="flex items-center space-x-2 text-sm text-gray-500 dark:text-gray-400">
+      <li>
+        <%= link_to "Home", root_path, class: "hover:text-primary-600 dark:hover:text-primary-400" %>
+      </li>
+      <li class="flex items-center">
+        <svg class="h-4 w-4 mx-1" fill="currentColor" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+        </svg>
+      </li>
+      <li>
+        <%= link_to "Events", events_path, class: "hover:text-primary-600 dark:hover:text-primary-400" %>
+      </li>
+      <li class="flex items-center">
+        <svg class="h-4 w-4 mx-1" fill="currentColor" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+        </svg>
+      </li>
+      <li>
+        <%= link_to @event.title, @event, class: "hover:text-primary-600 dark:hover:text-primary-400" %>
+      </li>
+      <li class="flex items-center">
+        <svg class="h-4 w-4 mx-1" fill="currentColor" viewBox="0 0 20 20">
+          <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path>
+        </svg>
+      </li>
+      <li class="font-medium text-gray-700 dark:text-gray-300">
+        Edit
+      </li>
+    </ol>
+  </nav>
+
+  <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-8">
+    <h1 class="text-2xl md:text-3xl font-bold text-gray-900 dark:text-white">Edit Event</h1>
+    
+    <div class="mt-4 md:mt-0">
+      <%= link_to @event, class: "btn btn-outline" do %>
+        <%= icon "eye", class: "w-5 h-5 mr-2" %>
+        View Event
+      <% end %>
+    </div>
+  </div>
 
   <%= render "form", event: @event %>
-
-  <%= link_to "Show this event", @event, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to "Back to events", events_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
